--- a/css/themehelper-css.css
+++ b/css/themehelper-css.css
@@ -11,6 +11,7 @@ background-position: 0px 34px;
 background-color:grey;
   box-sizing: border-box;
   vertical-align:top;
+  font-size:0;
 }
 
 a.themehelper-icon.dark {
